add node v.8.9.2 release to 03-comp-matrix.mdx

--- a/docs/16-release-notes/03-comp-matrix.mdx
+++ b/docs/16-release-notes/03-comp-matrix.mdx
@@ -16,6 +16,7 @@ However, if you need compatibility with all components, we recommend using versi
 
 | [Cardano node](https://github.com/IntersectMBO/cardano-node/releases)                         | [Cardano DB Sync](https://github.com/IntersectMBO/cardano-db-sync/releases)                                                                                                                                                           | [Cardano Rosetta server](https://github.com/cardano-foundation/cardano-rosetta/releases)                                                                            | [Cardano GraphQL](https://github.com/cardano-foundation/cardano-graphql/releases)                                                                                     | [Cardano wallet](https://github.com/cardano-foundation/cardano-wallet/releases)                                                                                                          |
 | --------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **[8.9.2](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.2)** (fix)            | TBD                                                                                                                                                                                                                                   | TBD                                                                                                                                                                 | TBD                                                                                                                                                                   |                                                                                           |
 | **[8.9.1](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.1)** (minor update)   | TBD                                                                                                                                                                                                                                   | TBD                                                                                                                                                                 | TBD                                                                                                                                                                   | [2024-03-27](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-03-27)                                                                                              |
 | **[8.9.0](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.0)** (bug fix)        |                                                                                                                                                                                                                                       |                                                                                                                                                                     |                                                                                                                                                                       |                                                                                                                                                                                          |
 | **[8.7.3](https://github.com/IntersectMBO/cardano-node/releases/tag/8.7.3)** (minor bug fix)  | [13.2.0.1](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.2.0.1)                                                                                                                                                     | [2.2.1](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.2.1)                                                                                   |                                                                                                                                                                       | [2024-03-01](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-03-01)                                                                                              |
