--- a/docs/16-release-notes/03-comp-matrix.mdx
+++ b/docs/16-release-notes/03-comp-matrix.mdx
@@ -12,14 +12,14 @@ conjunction with the Cardano component dependencies definition.
 If you only require using the node, such as interacting directly with the node
 or managing stake pool operations, we recommend the latest node version. 
 However, if you need compatibility with all components, we recommend using version
-[1.35.7](https://github.com/IntersectMBO/cardano-node/releases/tag/1.35.7).
+[8.7.3](https://github.com/IntersectMBO/cardano-node/releases/tag/8.7.3).
 
 | [Cardano node](https://github.com/IntersectMBO/cardano-node/releases)                         | [Cardano DB Sync](https://github.com/IntersectMBO/cardano-db-sync/releases)                                                                                                                                                           | [Cardano Rosetta server](https://github.com/cardano-foundation/cardano-rosetta/releases)                                                                            | [Cardano GraphQL](https://github.com/cardano-foundation/cardano-graphql/releases)                                                                                     | [Cardano wallet](https://github.com/cardano-foundation/cardano-wallet/releases)                                                                                                          |
 | --------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **[8.9.2](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.2)** (fix)            | TBD                                                                                                                                                                                                                                   | TBD                                                                                                                                                                 | TBD                                                                                                                                                                   |                                                                                           |
+| **[8.9.2](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.2)** (fix)            | TBD                                                                                                                                                                                                                                   | TBD                                                                                                                                                                 | TBD                                                                                                                                                                   |                                                                                                                                                                                          |
 | **[8.9.1](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.1)** (minor update)   | TBD                                                                                                                                                                                                                                   | TBD                                                                                                                                                                 | TBD                                                                                                                                                                   | [2024-03-27](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-03-27)                                                                                              |
 | **[8.9.0](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.0)** (bug fix)        |                                                                                                                                                                                                                                       |                                                                                                                                                                     |                                                                                                                                                                       |                                                                                                                                                                                          |
-| **[8.7.3](https://github.com/IntersectMBO/cardano-node/releases/tag/8.7.3)** (minor bug fix)  | [13.2.0.1](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.2.0.1)                                                                                                                                                     | [2.2.1](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.2.1)                                                                                   |                                                                                                                                                                       | [2024-03-01](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-03-01)                                                                                              |
+| **[8.7.3](https://github.com/IntersectMBO/cardano-node/releases/tag/8.7.3)** (minor bug fix)  | [13.2.0.1](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.2.0.1)                                                                                                                                                     | [2.2.1](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.2.1)                                                                                   | [8.0.1](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.0.1)                                                                                     | [2024-03-01](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-03-01)                                                                                              |
 | **[8.7.2](https://github.com/IntersectMBO/cardano-node/releases/tag/8.7.2)** (major update)   |                                                                                                                                                                                                                                       |                                                                                                                                                                     |                                                                                                                                                                       |                                                                                                                                                                                          |
 | **[8.1.2](https://github.com/IntersectMBO/cardano-node/releases/tag/8.1.2)** (minor update)   | [13.1.1.3](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.1.1.3)                                                                                                                                                     | [2.2.0](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.2.0)                                                                                   |                                                                                                                                                                       | [2024-12-18](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2023-12-18)                                                                                              |
 | **[8.1.1](https://github.com/IntersectMBO/cardano-node/releases/tag/8.1.1)** (bug fix)        | [13.1.1.3](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.1.1.3)                                                                                                                                                     |                                                                                                                                                                     |                                                                                                                                                                       | [2023-07-18](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2023-07-18)                                                                                              |
@@ -41,7 +41,7 @@ However, if you need compatibility with all components, we recommend using versi
 | **[1.25.1](https://github.com/IntersectMBO/cardano-node/releases/tag/1.25.1)**                | [8.0.0](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/8.0.0)/[9.0.0](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/9.0.0)                                                                               | [1.1.0](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/1.1.0)/[1.2.1](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/1.2.1) | [3.2.0](https://github.com/cardano-foundation/cardano-graphql/releases/tag/3.2.0)                                                                                     | [2021-02-12](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2021-02-12)/[2021-02-15](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2021-02-15)  |
 | **[1.24.2](https://github.com/IntersectMBO/cardano-node/releases/tag/1.24.2)**                | [7.1.0](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/7.1.0)                                                                                                                                                           | [1.0.0](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/1.0.0)                                                                                   | [3.1.1](https://github.com/cardano-foundation/cardano-graphql/releases/tag/3.1.1)                                                                                     | [2020-12-21](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2020-12-21)/[2021-01-12](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2021-01-12)  |
 | **[1.21.1](https://github.com/IntersectMBO/cardano-node/releases/tag/1.21.1)**                | [5.0.2](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/5.0.2)/[5.0.3](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/5.0.3)/[6.0.0](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/6.0.0)   |                                                                                                                                                                     | [2.2.1](https://github.com/cardano-foundation/cardano-graphql/releases/tag/2.2.1)                                                                                     | [2020-10-13](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2020-10-13)                                                                                              |
-| **[1.20.0](https://github.com/IntersectMBO/cardano-node/releases/tag/1.20.0)**                | [5.0.1](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/5.0.1)/[5.0.3](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/5.0.3)                                                                               |                                                                                                                                                                     | [2.2.0](https://github.com/cardano-foundation/cardano-graphql/releases/tag/2.2.0)                                                                                     | [2020-9-22](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2020-09-22)/[2020-09-30](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2020-09-30)    |
+| **[1.20.0](https://github.com/IntersectMBO/cardano-node/releases/tag/1.20.0)**                | [5.0.1](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/5.0.1)/[5.0.3](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/5.0.3)                                                                               |                                                                                                                                                                     | [2.2.0](https://github.com/cardano-foundation/cardano-graphql/releases/tag/2.2.0)                                                                                     | [2020-9-22](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2020-09-22)/[2020-09-30](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2020-09-30)   |
 | **[1.19.1](https://github.com/IntersectMBO/cardano-node/releases/tag/1.19.1)**                | [5.0.0](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/5.0.0)/[5.0.1](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/5.0.1)/[5.0.3](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/5.0.3)   |                                                                                                                                                                     | [2.1.0](https://github.com/cardano-foundation/cardano-graphql/releases/tag/2.1.0)                                                                                     | [2020-9-11](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2020-09-11)                                                                                               |
 | **[1.19.0](https://github.com/IntersectMBO/cardano-node/releases/tag/1.19.0)**                |                                                                                                                                                                                                                                       |                                                                                                                                                                     |                                                                                                                                                                       |                                                                                                                                                                                          |
 | **[1.18.0](https://github.com/IntersectMBO/cardano-node/releases/tag/1.18.0)**                | [4.0.0](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/4.0.0)                                                                                                                                                           |                                                                                                                                                                     |                                                                                                                                                                       |                                                                                                                                                                                          |
@@ -54,5 +54,5 @@ The table below illustrates the key architectural components used in various Car
 |--|--|--|--|
 | Stake pool operations  | `cardano-node` `cardano-cli` | Essential for block creation and participating in the consensus process. `cardano-cli` provides command-line interface for managing and interacting with the node. | Monitoring tools like `Prometheus` and `Grafana` for performance metrics.|
 | Address management  | `cardano-addresses` `cardano-cli` | `cardano-addresses` is used for creating and managing cryptographic addresses. It's often bundled with `cardano-node` for ease of use in address operations. | |
-| Handling wallets and transactions  | `cardano-rosetta` `cardano-wallet` | `cardano-wallet` is used for direct wallet management and transactions. `cardano-rosetta` offers a standardized interface for ineracting with the blockchain. | |
-| On-chain data and metadata | `cardano-db-cync` `cardano-graphql` | `cardano-db-sync` populates a PostgreSQL database from node data, making it queryable. `cardano-graphql` allows querying this data via GraphQL.  | `cardano-rosetta` can be used for blockchain agnostic data interaction. |
+| Handling wallets and transactions  | `cardano-rosetta` `cardano-wallet` | `cardano-wallet` is used for direct wallet management and transactions. `cardano-rosetta` offers a standardized interface for interacting with the blockchain. | |
+| On-chain data and metadata | `cardano-db-sync` `cardano-graphql` | `cardano-db-sync` populates a PostgreSQL database from node data, making it queryable. `cardano-graphql` allows querying this data via GraphQL.  | `cardano-rosetta` can be used for blockchain agnostic data interaction. |
