--- a/docs/07-development-guidelines/04-smart-contracts/03-aiken.mdx
+++ b/docs/07-development-guidelines/04-smart-contracts/03-aiken.mdx
@@ -4,15 +4,7 @@ metaTitle: Learn about Aiken
 sidebar_position: 3
 ---
 
-:::note
-
-Please note that Aiken is still in development and is not yet recommended
-for use in production environments.
-
-:::
-
-
-Aiken is a new programming language and toolchain for developing smart contracts
+Aiken is a modern programming language and toolchain for developing smart contracts
 on the Cardano blockchain. It draws inspiration from various modern languages,
 like Gleam, Rust, and Elm, renowned for their friendly error messages and an
 overall excellent developer experience.
