--- a/docs/07-development-guidelines/01-installing-the-cardano-node.mdx
+++ b/docs/07-development-guidelines/01-installing-the-cardano-node.mdx
@@ -6,8 +6,12 @@ metaTitle: Installing the Cardano node
 ## Downloading pre-compiled executables
 
 You can install the Cardano node and the CLI using
-[pre-compiled executable files](https://github.com/input-output-hk/cardano-node#executables)
+[pre-compiled executable files](https://github.com/intersectmbo/cardano-node/releases/latest)
 for your platform.
+
+## Using Docker
+
+You can also use a [Docker](https://www.docker.com/) image to run your Cardano node in a container. For more details, see [this explainer](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/Docker.md).
 
 ## Building from source
 
@@ -15,16 +19,11 @@ Alternatively, if you want to build from source, there are two options
 available to you. Depending on your build tool preference, you can build from
 the source code using either of the following:
 
-- [Cabal: building the node](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/install.md)
-- [Nix: building the node](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/building-the-node-using-nix.md)
+- [Assisted with Nix](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/building-the-node-using-nix.md) (recommended) 
+- [Manually with Cabal](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/install.md)
 
-Please refer to the [cardano-node releases page](https://github.com/input-output-hk/cardano-node/releases/latest) to ensure you are working with the latest version of the node.
+Please refer to the [cardano-node releases page](https://github.com/intersectmbo/cardano-node/releases/latest) to ensure you are working with the latest version of the node.
 
-Once you have installed the node, you need to
-[specify the configuration parameters](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/understanding-config-files.md).
-
-## Using Docker
-
-You can also use a Docker image to build your Cardano node. For more details, see [this explainer](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/Docker.md).
+Once you have installed the node, you need to [configure it](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/understanding-config-files.md).
 
 
