quick links fix

--- a/docs/08-operating-a-stake-pool/01-stake-pool-operations-101.mdx
+++ b/docs/08-operating-a-stake-pool/01-stake-pool-operations-101.mdx
@@ -9,23 +9,9 @@ This page helps you navigate through the technical information, resources, and
 updates needed to manage your pool/s operations efficiently, whether you're an
 experienced operator or just starting out.
 
-Last updated on: March 13, 2024
-
-Current node version:
-[v.8.9.0](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.0)  
-[Release notes](https://docs.cardano.org/tools/release-notes/)  
-[Compatibility matrix](https://docs.cardano.org/tools/comp-matrix/)
-
-Access the
-[cardano-node](https://github.com/input-output-hk/cardano-node#overview-of-the-cardano-node-repository)
-GitHub repository for more information.
-
 ## Latest node details
 
-Cardano node v.8.9.0 introduces
-[Genesis Lite bootstrap peers](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/understanding-config-files.md#genesis-lite-aka-bootstrap-peers).
-This version also fixes a small bug in the dynamic block forging logic and
-includes some overall improvements.
+You can find the [latest release here.](https://github.com/IntersectMBO/cardano-node/releases)
 
 ## Overview of Cardano environments
 
