--- a/docs/08-operating-a-stake-pool/01-stake-pool-operations-101.mdx
+++ b/docs/08-operating-a-stake-pool/01-stake-pool-operations-101.mdx
@@ -47,13 +47,9 @@ Learn more about Cardano environments
 
 Access tools and resources through the links below.
 
-### Tools
-
-[Testnets faucet](https://docs.cardano.org/cardano-testnet/tools/faucet/)  
-[Staking calculator](https://docs.cardano.org/cardano-testnet/tools/staking-calculator/)  
-[Plutus fee estimator](https://docs.cardano.org/cardano-testnet/tools/plutus-fee-estimator/)  
-[Release notes](https://docs.cardano.org/tools/release-notes/)  
-[Compatibility matrix](https://docs.cardano.org/tools/comp-matrix/)  
+[Testnets faucet](https://docs.cardano.org/cardano-testnets/tools/faucet)  
+[Release notes](https://docs.cardano.org/release-notes/release-notes)  
+[Compatibility matrix](https://docs.cardano.org/release-notes/comp-matrix)  
 [Cardano ecosystem tools](https://developers.cardano.org/tools/)  
 [Community-built developer tools](https://www.essentialcardano.io/article/a-list-of-community-built-developer-tools-on-cardano)  
 [Cardano blockchain explorer](https://explorer.cardano.org/en.html)  
@@ -68,14 +64,6 @@ Access tools and resources through the links below.
 [ADAtainment](https://www.adatainment.com/index.php?page=home&lang=en)  
 [Cardano PoolTool](https://pooltool.io/)  
 [POOLSTATS](https://poolstats.org/#)
-
-### Resources
-
-[Development guidelines](https://docs.cardano.org/development-guidelines/installing-the-cardano-node/)  
-[Operating a stake pool](https://docs.cardano.org/operating-a-stake-pool/creating-a-stake-pool)  
-[The node video course (includes SPO explainers)](https://docs.cardano.org/development-guidelines/cardano-node-course/)
-[Tutorials](https://docs.cardano.org/development-guidelines/transaction-tutorials/introduction/)  
-[Support and feedback](https://docs.cardano.org/cardano-testnet/support-feedback/)
 
 ## SPO alliances
 
