--- a/docs/08-operating-a-stake-pool/02-about-stake-pools.mdx
+++ b/docs/08-operating-a-stake-pool/02-about-stake-pools.mdx
@@ -3,12 +3,9 @@ title: About stake pools, operators, and owners
 metaTitle: About stake pools, operators, and owners
 ---
 
-This section includes an overview of stake pool operations and explains the ways
-of creating and managing your own stake pool.
-
 A [stake pool](/learn/stake-pools) is a reliable server node that holds and
 maintains the combined stake of various stakeholders in a single entity. Stake
-pools use the [Cardano node](https://docs.cardano.org/learn/cardano-node/) to
+pools use the [Cardano node](/learn/cardano-node) to
 validate how the pool interacts with the network and are responsible for
 transaction processing and block production.
 
@@ -25,7 +22,7 @@ conceptual difference between these two roles:
   pool owners during re-registration.
 - A _stake pool owner_ is a person who pledges their stake to the pool to
   increase the pool’s reward earning capacity and desirability. The ability of
-  the owner to [pledge stake](/learn/pledging-rewards) provides protection
+  the owner to [pledge stake](learn/pledging-rewards) provides protection
   against Sybil attacks.
 
 Usually, the stake pool operator and the owner is the same person, however, a
@@ -49,5 +46,3 @@ potential rewards, or reputation for the operator.
 
 _Note, that to eliminate such a case, it is beneficial for owners and operators
 to consider entering into contractual arrangements._
-
-Read the following sections to find out how to set up and operate a stake pool.
