--- a/docs/08-operating-a-stake-pool/02-about-stake-pools.mdx
+++ b/docs/08-operating-a-stake-pool/02-about-stake-pools.mdx
@@ -46,3 +46,12 @@ potential rewards, or reputation for the operator.
 
 _Note, that to eliminate such a case, it is beneficial for owners and operators
 to consider entering into contractual arrangements._
+
+:::info
+
+Developer resources:
+
+- [Stake pool operations overview](https://developers.cardano.org/docs/operate-a-stake-pool/)
+- [Cardano course: creating a stake pool](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool)
+
+:::
