--- a/docs/08-operating-a-stake-pool/05-node-monitoring.mdx
+++ b/docs/08-operating-a-stake-pool/05-node-monitoring.mdx
@@ -5,18 +5,14 @@ metaTitle: Logging and monitoring
 
 Regular monitoring of active nodes is crucial to determine if the node is running optimally, if the system is performant, or if fine-tuning is required.
 
-Activate a trace on the node to access metrics, including network traffic, memory usage, and general blockchain data. For details, see:
+:::info
 
--   [Configuring logging](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/logging-monitoring/logging.md)
-    
-You can then choose a toolset to monitor your node:
+Developer resources:
 
--   [Monitoring the node with EKG](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/logging-monitoring/ekg.md)
--   [Using a Grafana Dashboard](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/logging-monitoring/grafana.md)
--   [Monitoring the node in real time with RTView](https://docs.cardano.org/cardano-components/cardano-rtview)
--   [Monitoring the node with Prometheus](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/logging-monitoring/prometheus.md)
+- [Cardano course: monitoring the nodes](https://cardano-course.gitbook.io/cardano-course/handbook/monitoring-our-nodes)
+- [Monitoring with gLiveView](https://developers.cardano.org/docs/operate-a-stake-pool/monitoring-gLiveView)
+- [Grafana dashboard tutorial](https://developers.cardano.org/docs/operate-a-stake-pool/grafana-dashboard-tutorial)
 
-You can also see video tutorials and Cardano Course handbook material:
+:::
 
-- [Monitoring the node with Prometheus and Grafana](https://cardano-course.gitbook.io/cardano-course/handbook/monitoring-our-nodes)
-- [Video explainer on monitoring the node with Prometheus](https://www.youtube.com/watch?v=iqAmwhk7djE&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=22)
+
