--- a/docs/08-operating-a-stake-pool/06-creating-keys-and-certificates.mdx
+++ b/docs/08-operating-a-stake-pool/06-creating-keys-and-certificates.mdx
@@ -14,7 +14,7 @@ The keys that you need as a stake pool operator are:
 
 - stake pool cold key
 - stake pool hot key (KES key)
-- stake pool VRF key
+- stake pool VRF key.
 
 The KES key, or hot key as mentioned above, is a node operational key that
 authenticates who you are. You specify the validity of the KES key using the
@@ -22,13 +22,15 @@ start time and key period parameters and this KES key needs to be updated every
 90 days. The VRF key is a signing verification key and is stored within the
 operational certificate. 
 
-## Instructions to create and manage stake pool operation keys
+:::info
 
-- [Creating keys and addresses](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/3_keys_and_addresses.md)
-- [Creating a simple transaction](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/4_simple_transaction.md)
-- [Registering stake address](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/5_register_key.md)
-- [Generating stake pool keys](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/6_node_keys.md)
-- [Creating KES key pair](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/7_KES_period.md)
+Developer resources:
+
+- [Generating wallet keys](https://developers.cardano.org/docs/operate-a-stake-pool/generating-wallet-keys)
+- [Generating block-producing keys](https://developers.cardano.org/docs/operate-a-stake-pool/block-producer-keys)
+- [Cardano course: generating keys](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/generate-keys).
+
+:::
 
 
 ## Creating an operational certificate and registering a stake pool
@@ -43,21 +45,24 @@ operational key is valid, to prevent malicious interference. The certificate
 identifies the current operational key, and is signed by the offline key.
 
 Certificates are generated with an issue counter number and included in the
-header of each block the node generates. Note that with the Vasil hard fork, an operator would need to create an operational certificate using cold.counter +1. This means that the `OpCert` must be exactly one more than the previously used one. 
+header of each block the node generates. 
 
-Certificates include a kes-period (start date), which indicates the time span
+Certificates include a kes-period (start date), which indicates the period
 within which the certificate is valid before you need to create another one.
 
 Certificates are generated on the offline machine using the offline/cold keys,
 before being copied over to the node to validate the KES keys used to sign the
 blocks.
 
-## Instructions to work with operational certificates
+:::info
 
-After creating a KES key pair, you can proceed with registering your stake pool with metadata, registering relay nodes on-chain, and generating a stake pool registration certificate. For a step-by-step tutorial, see:
+Developer resources:
 
-- [Registering a stake pool](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/8_register_stakepool.md)
+- [Registering a stake address](https://developers.cardano.org/docs/operate-a-stake-pool/register-stake-address)
+- [Registering a pool](https://developers.cardano.org/docs/operate-a-stake-pool/register-stake-pool)
+- [Cardano course: registering a stake pool](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/register-stake-pool).
 
+:::
 
 
 
