Update a link to the typeform

--- a/docs/15-pioneer-programs/01-plutus-pioneers.mdx
+++ b/docs/15-pioneer-programs/01-plutus-pioneers.mdx
@@ -73,6 +73,6 @@ unlock their individual token.
 
 ## Yes, I'm interested!
 
-**[REGISTER NOW](https://input-output.typeform.com/to/au0XDcBP)**
+**[REGISTER NOW](https://services.iohk.io/plutus-pioneers-registration)**
 
 Please share your details and we will be in touch.
