--- a/docs/02-new-to-cardano/02-what-is-a-cryptocurrency.mdx
+++ b/docs/02-new-to-cardano/02-what-is-a-cryptocurrency.mdx
@@ -22,14 +22,15 @@ obtained from the user's public keys.
 ### Ada is the native currency of Cardano
 
 Each blockchain ledger has its underlying cryptocurrency or native currency. Ada
-is the native, or principal currency on [Cardano](https://cardano.org/). This means that ada is the main
-payment unit on Cardano; it is accepted as fee-payment, to make deposits, and is
-also the only currency in which rewards are distributed.
+is the native, or principal currency on [Cardano](https://cardano.org/). This
+means that ada is the main payment unit on Cardano; it is accepted as
+fee-payment, to make deposits, and is also the only currency in which rewards
+are distributed.
 
 Lovelace is the smallest denomination of ada. One ada = 1,000,000 lovelaces. Ada
 has six decimal places, which makes it easily divisible into smaller fractions.
 
-### Native tokens 
+### Native tokens
 
 Cardano also supports the creation of native tokens ‒ digital assets that are
 created for specific purposes. This means that users, developers, and businesses
@@ -43,7 +44,6 @@ payment unit, reward, trading asset, or information holder.
 Related topics:
 
 - [Cardano monetary policy](/explore-cardano/monetary-policy)
-- [Learn about native tokens](/native-tokens/learn).
+- [Learn about native tokens](/development-guidelines/native-tokens).
 
 :::
-
