--- a/docs/08-operating-a-stake-pool/07-maintenance.mdx
+++ b/docs/08-operating-a-stake-pool/07-maintenance.mdx
@@ -6,8 +6,7 @@ metaTitle: Stake pool operations and maintenance
 After a successful stake pool registration and its further operation, SPOs might
 be interested in obtaining certain information about their pools’ activity.
 Information about those pools that are operating on mainnet can be fetched using
-different explorer tools (see [introduction](/08-operating-a-stake-pool/index.mdx), which provide verified stake pool
-details.
+different explorer tools. See [introduction](/08-operating-a-stake-pool/index.mdx) for useful resources.
 
 In certain cases, exchanges and stake pool operators, in particular, are looking
 for in-depth information about their mainnet _and_ testnet pools. To access data
