--- a/docs/07-development-guidelines/04-smart-contracts/03-aiken.mdx
+++ b/docs/07-development-guidelines/04-smart-contracts/03-aiken.mdx
@@ -4,6 +4,15 @@ metaTitle: Learn about Aiken
 sidebar_position: 3
 ---
 
+:::info
+
+To get started with Aiken, see:
+
+- [Aiken website](https://aiken-lang.org)
+- [GitHub repository](https://github.com/aiken-lang/aiken)
+
+:::
+
 Aiken is a modern programming language and toolchain for developing smart contracts
 on the Cardano blockchain. It draws inspiration from various modern languages,
 like Gleam, Rust, and Elm, renowned for their friendly error messages and an
@@ -27,8 +36,3 @@ issues.
 Aiken is easier than Plutus to get started with for those who are less familiar
 with functional languages like Haskell. Similar to Plutus, Aiken scripts are
 compiled down to the untyped Plutus Core (UPLC).
-
-## Resources
-
-- [Aiken website](https://aiken-lang.org)
-- [GitHub repository](https://github.com/aiken-lang/aiken)
