--- a/docs/03-learn/16-transaction-costs-determinism.mdx
+++ b/docs/03-learn/16-transaction-costs-determinism.mdx
@@ -124,14 +124,14 @@ Script validation failure or success does affect how a transaction is processed.
 However, the _True_ or _False_ outcome, as well as ledger changes associated
 with either outcome, are predictable for a given transaction.
 
-You can also use the
-[Plutus fee estimator](/cardano-testnets/tools/plutus-fee-estimator)
-to predict script and transaction fees.
+:::info
 
+Further reading:
 
-### Further reading:
-
-- [About the collateral mechanism](https://docs.cardano.org/plutus/collateral-mechanism)
 - [Cost model parameters for Plutus scripts](https://plutus-apps.readthedocs.io/en/latest/reference/cost-model-parameters.html)
 - [No surprises transaction validation on Cardano: Part 1](https://iohk.io/en/blog/posts/2021/09/06/no-surprises-transaction-validation-on-cardano/)
 - [No surprises transaction validation: Part 2 (about two phases of validation and collateral](https://iohk.io/en/blog/posts/2021/09/07/no-surprises-transaction-validation-part-2/)
+
+:::
+
+
